--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,40 @@
 version: '3'
 services:
-#  front-app:
-#    build:
-#      context: ./front-app
-#      dockerfile: Dockerfile
-#    image: front:1.0
-#    ports:
-#      - 3000:3000
-#    environment:
-#      FRONT_HOST: 0.0.0.0
-#      USER_SERVICE: http://user:3000
-  user-service:
+  front:
+    container_name: go-react-dev-front
     build:
-      context: ./user-service
+      context: ./front
       dockerfile: Dockerfile
-    image: user-service:1.0
+    ports:
+      - 3000:3000
+    working_dir: /src
+    volumes:
+      - ./front:/src:cached
+      - /src/node_modules
+    environment:
+      CHOKIDAR_USEPOLLING: 'true'
+      FRONT_HOST: 0.0.0.0
+      API_HOST: http://api:3000
+    tty: true
+
+  api:
+    container_name: go-react-dev-api
+    build:
+      context: ./api
+      dockerfile: Dockerfile
     ports:
       - 3001:3001
-    tty:
-      true
     volumes:
-      - ./user-service:/go/src/app
+      - ./api:/src:cached
     environment:
       POSTGRES_HOST: db
       POSTGRES_PORT: 5432
-    # env_file:
-    #   - .env
+      GOOGLE_APPLICATION_CREDENTIALS: /src/serviceAccountKey.json
+    tty: true
     depends_on:
-      - user-db
-  user-db:
+      - db
+  db:
+    container_name: api_db
     image: 'postgres:latest'
     ports:
       - '5432:5432'
@@ -39,7 +45,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - user_database_data:/var/lib/postgresql/data
+      - db:/var/lib/postgresql/data
 volumes:
-  user_database_data:
+  db:
     driver: local
