--- a/front/package.json
+++ b/front/package.json
@@ -52,7 +52,11 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "autoprefixer": "^9.8.6",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
